# GenomeBrowser-CPlusPlus

./: README.md
view-cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  copyriht.txt  readme.txt
view-cmake/art/: BAM.xpm  BAM.xpm~  BED.xpm  BED.xpm~  FA.xpm  FA.xpm~  GFF.xpm  GFF.xpm~  VCF.xpm  VCF.xpm~  hongqi2.xpm  mHome_folder.xpm  mHome_folder.xpm~  pilot_frame.xpm  pilot_frame.xpm~  pilot_frame_.xpm
view-cmake/art/xpm/: my_BED.xpm  my_BED.xpm~  my_CF.xpm  my_CF.xpm~  my_FA.xpm  my_FA.xpm~  my_bam.xpm  my_bam.xpm~  my_folder.xpm  my_folder.xpm~
view-cmake/samtools/: CMakeLists.txt  Makefile  bam.h  cmake_install.cmake  knetfile.c
view-cmake/src/: ChrosomeChoice.cpp  ChrosomeChoice.h  MMpwindow.cpp  MMpwindow.h  MRightWin.cpp  MRightWin.h  MessagePopUpWindow.cpp  MessagePopUpWindow.h  MouseWin.cpp  MouseWin.h  Mytree.h  bamData.cpp  bamData.h  bamFilter.cpp  bamFilter.h  dataFactory.cpp  dataFactory.h  filterDialog.cpp  filterDialog.h  mathplot.cpp  mcursor.h  pilot_viewApp.cpp  pilot_viewApp.h  pilot_viewMain.cpp  pilot_viewMain.h  pilot_workspace.cpp  pilot_workspace.h  plotBase.cpp  plotBase.h  plotDetail.cpp  plotDetail.h  plotNormal.cpp  plotNormal.h  plotProfile.cpp  plotProfile.h  plotSnp.cpp  plotSnp.h  plot_window.cpp  plot_window.h  process.cpp  (+14 more)
view-cmake/tabix/: CMakeLists.txt  Makefile  bgzf.h  cmake_install.cmake
