IF(MINGW)
ADD_DEFINITIONS(-D_USE_KNETFILE -D_CURSES_LIB=2)
ELSE(UNIX)
ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64 -D_USE_KNETFILE -DBGZF_CACHE -O2 -fPIC)
ENDIF()


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF(MINGW)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/samtools/win32)
ENDIF()

ADD_LIBRARY(tabix bgzf.c kstring.c knetfile.c index.c bedidx.c)
